[package]
name = "cargo-simple-todo"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DumbMahreeo/cargo-simple-todo"
description = "A simple cargo tool for checking todo(s)"

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
lazy-regex = "2.3.0"
once_cell = "1.13.0"

[[bin]]
name = "cargo-todo"
path = "src/main.rs"
