[package]
name = "cargo-simple-todo"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/DumbMahreeo/cargo-simple-todo"
description = "cargo-simple-todo, a simple cargo tool for checking todo(s)"

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
clap-cargo = "0.9.1"
lazy-regex = "2.3.0"
once_cell = "1.13.0"

[[bin]]
name = "cargo-todo"
path = "src/main.rs"
